<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.venato.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_emp"
        android:name="com.example.venato.ui.home.EmployeesHomeFragment"
        android:label="Employees"
        tools:layout="@layout/fragment_employees_home"/>

    <fragment
        android:id="@+id/nav_progress"
        android:name="com.example.venato.ui.progress.ProgressFragment"
        android:label="@string/menu_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/nav_join"
        android:name="com.example.venato.ui.join.JoinFragment"
        android:label="@string/menu_join"
        tools:layout="@layout/fragment_join" />

    <fragment
        android:id="@+id/nav_leave"
        android:name="com.example.venato.ui.leave.LeaveFragment"
        android:label="@string/menu_leave"
        tools:layout="@layout/fragment_leave" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.venato.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.venato.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

</navigation>